ReactiveML 1.08.04 (XXXX-XX-XX):
--------------------------------


ReactiveML 1.08.03 (2012-10-23):
--------------------------------
 - rmlc: bug fix in the reactivity analysis.


ReactiveML 1.08.02 (2012-10-19):
--------------------------------
 - rmlc: new reactivity analysis.
 * rmlc: renaming of the option -no_loop_warning into -no_reactivity_warning.
 - rmlc: new option -dreactivity to display reactivity effects.
 - rmlc: new option -old_loop_warning to activate the previous
         reactivity analysis.
 - rmlc: adding of the reactivity effects into the *.sannot file.
 - rmlc: bug fixes.
 - rmltop: new option -dreactivity to display reactivity effects.


ReactiveML 1.08.01 (2012-06-14):
--------------------------------
 - New tool: rmlbuild, allows to build rml programs more easily using
   .rmlsim files. A foo.rmlsim would look like the following:
   /--------------
   | sim: main
   | sampling: 0.1
   | n : 100
   \--------------
   It tells the compiler that the main file is "foo.rml" has a main
   function called "main". The parameters "sampling" and "n" are not
   mandatory. They have the same semantics as the compiler's command
   line options -sampling and -n. Then the command to compile the
   program is "rmlbuild foo.rml.byte" or "rmlbuild foo.rml.native".
 - rmltop: "rmltop -i" lists known toplevel's directives.
 - New configure options:
   + "-target|--target" to choose a default compilation target ("opt"
     or "byte") The configure script will choose the best option if
     "-target" is not specified.
   + "-debug|--debug" adds "-g -dtypes" to OCAMLFLAGS and OCAMLOPTFLAGS.
 - Provide the Str library.


ReactiveML 1.07.08 (2010-12-16):
--------------------------------
 - rmlc: bug fixes.
 - rmllib: bug fixes.


ReactiveML 1.07.07 (2010-10-28):
--------------------------------
 - rmlc: bug fixes.


ReactiveML 1.07.06 (2010-01-30):
--------------------------------
 - rmlc: bug fixes.


ReactiveML 1.07.05 (2009-06-18):