@@ -196,6 +196,10 @@ let rec translate_ml e =
     | Rexpr_record_access (expr, label) ->
 	Coexpr_record_access (translate_ml expr, label)
 
+    | Rexpr_record_with (expr, l) ->
+	Coexpr_record_with (translate_ml expr,
+                            List.map (fun (lab,e) -> lab, translate_ml e) l)
+
     | Rexpr_record_update (e1, label, e2) ->
 	Coexpr_record_update (translate_ml e1, label, translate_ml e2)
 
