@@ -190,6 +190,10 @@ let rec translate_ml e =
     | Rexpr_record_access (expr, label) ->
 	Kexpr_record_access (translate_ml expr, label)
 
+    | Rexpr_record_with (expr, l) ->
+	Kexpr_record_with (translate_ml expr,
+                           List.map (fun (lab,e) -> lab, translate_ml e) l)
+
     | Rexpr_record_update (e1, label, e2) ->
 	Kexpr_record_update (translate_ml e1, label, translate_ml e2)
 
