@@ -339,6 +339,9 @@ let rec translate env e =
 	in
 	Rexpr_record_access (translate env expr, glab)
 
+    | Pexpr_record_with (expr, lab_expr_list) ->
+        Rexpr_record_with (translate env expr, translate_record env lab_expr_list)
+
     | Pexpr_record_update (e1, lab, e2) ->
 	let glab = try Modules.pfind_label_desc lab.pident_id with
 	| Modules.Desc_not_found ->
