@@ -1,1 +1,1 @@
-VERSION=1.08.04-dev
+VERSION=1.08.04
