@@ -1,5 +1,10 @@
-ReactiveML 1.08.04 (XXXX-XX-XX):
+ReactiveML 1.08.04 (2013-02-03):
 --------------------------------
+ - rmlc: simplification of effects in the reactivity analysis.
+ - rmlc: new option -no_reactivity_simpl to keep reactivity effects
+         without simplifications.
+ - rmlc: bug fixes.
+ - rmllib: new sampling mode.
 
 
 ReactiveML 1.08.03 (2012-10-23):
